@@ -1,4 +1,9 @@
 0.83.11
+  - Added CHCP command to view current code page, or
+    change the current code page in the TrueType font
+    output. Supported code pages include 437, 808, 850,
+    852, 853, 855, 857, 858, 860, 861, 862, 863, 864,
+    865, 866, 869, 872, and 874. (Wengier)
   - Added function to automatically save states in the
     specified interval (in seconds). You can optionally
     specify a save slot or start and end save slots to
